--- a/package.json
+++ b/package.json
@@ -14,5 +14,15 @@
   "license": "ISC",
   "dependencies": {
     "gulp": "github:gulpjs/gulp#4.0"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.23.3",
+    "del": "^3.0.0",
+    "gulp-autoprefixer": "^4.1.0",
+    "gulp-concat-css": "^3.0.0",
+    "gulp-notify": "^3.1.0",
+    "gulp-pug": "^3.3.0",
+    "gulp-sass": "^3.1.0",
+    "multipipe": "^2.0.1"
   }
 }
